--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,20 @@
 }
 
 body {
-    background-image: url(../img/pexels-josh-hild-2448749.jpg);
-    background-size: 100% 100%;
+    /* background-image: url(../img/pexels-josh-hild-2448749.jpg);
+    background-size: 100% 100%; */
+    background: lightblue; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(
+      -90deg,
+      lightblue,
+      black
+    ); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(-90deg,
+      lightblue,)
 }
 
 .box {
-    border: 4px #435651 solid;
+    border: 4px lightblue solid;
     padding: 70px;
     border-radius: 10px;
     box-shadow: -5px 2px 54px -9px rgba(0, 0, 0, 1);
